# camera-trap-server-1

./: .env.sample  .gitignore  ;  Dockerfile  Dockerfile-postgres  Dockerfile-prod  Makefile  README.md  add-name-deployment.py  cronjob-every-month.sh  cronjob.sh  docker-compose-initdb.yml  docker-compose.yml  init-letsencrypt.sh  package.json  production.yml  pyproject.toml  staging.yml  webpack.config.js
base/: admin.py  models.py  urls.py  utils.py  views.py
base/migrations/: 0001_initial.py  0002_uploadhistory_created.py  0003_uploadhistory_error_type.py  0004_remove_uploadhistory_error_type_and_more.py  0005_uploadnotification.py  (+11 more)
conf/: .env  celery.py  dotenv.sample  settings.py  urls.py
cron_scripts/: check_data_gap.py  update_stat.py
docs/: API.md  arch.md  calculation.md  scripts.md
frontend-search/: .env.prod  dotenv-sample  package-lock.json  package.json  webpack.config.js
requirements/: base.txt
scripts/: add_annotation_seq.py  add_image_field.py  calc-sample.txt  count-project-stats.py  count-projectoversight-species-images-cache.py  count_folder_name.py  count_project_species.py  count_species.py  count_stat_data.py  create_forest_map.py  import-calc-sample.py  import-deployment-journal.py  import-deployment-stat.py  import-image-from-file-new.py  make-calc-data.py  nginx-django-staging.conf  nginx-django.conf  start
src/: AppSearch.js  Utils.js
taicat/: admin.py  apps.py  client_urls.py  client_views.py  models.py  search_view.py  tasks.py  urls-api.py  urls.py  utils.py  views.py
templates/: base.html  index.html  project_detail.html
(+203 files in other folders)
