[tool.poetry]
name = "camera-trap-server"
version = "0.1.0"
description = ""
authors = ["MooGoo <moogoo78@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"
django-environ = "^0.4.5"
psycopg2-binary = "^2.8.6"
gunicorn = "^20.0.4"
pymongo = "^3.11.3"
django-sslserver = "^0.22"
requests = "^2.26.0"
pandas = "^1.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
